Implement the quality tab. Fixed WFE-1235.